--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -361,6 +361,7 @@ title: Math, Sonification, Plots
 		function mouseOverImage() {
 		  audio = document.getElementById("program_microwave");
 		  audio.play();
+		  audio.play();
 		}
 
 		function mouseOutImage() {
