--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -11,9 +11,9 @@ title: Math, Sonification, Plots
 		!!! Use when moving this index.html file down one directory !!!
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 		!!! Use for sandbox !!!
-		<link rel="stylesheet" type="text/css" href="../../css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</script>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	<br><br>
 	
     <style>
@@ -309,7 +309,6 @@ title: Math, Sonification, Plots
 	<div class="myContainer">
 		<div class="floatItems">
 			<img id="myFunction"
-				 class="myContainer"
 				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				 style="width:150%;height:auto;"
 				 title="Click on Image for Description of Usage"
@@ -321,7 +320,7 @@ title: Math, Sonification, Plots
 			<img id="myAnimation"/>
 		</div>
 		
-		<div class="floatWarning">
+		<div class="floatWarning" id="myWarning">
 			<div><p>
 				This <strong>Wireframe</strong> is a Proof of Concept (POC) design for a novel microwave interface.
 				The primary objective of this interface is to improve user interaction with
@@ -332,7 +331,7 @@ title: Math, Sonification, Plots
 			</p></div>
 		</div>
 	</div>
-	
+		
 	<div class="btn-group btn-group-lg">
 		<button type="button" class="btn_xl" onclick="setBG_Black(); play(playCook)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
 		<button type="button" class="btn_xl" onclick="setBG_White(); play(playDefrost)" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
@@ -348,9 +347,37 @@ title: Math, Sonification, Plots
 	</div>
 	
 	
+	<audio id="program_microwave" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/program_microwave.mp4"></audio>
 	<audio id="audio_intro" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"></audio>
 	<audio id="audio_cook" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_cook_sound.mp4"></audio>
 	<audio id="audio_defrost" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_defrost_sound.mp4"></audio>
+	
+	<script>
+		document.getElementById("myWarning").onmouseover = function() {mouseOverText()};
+		document.getElementById("myWarning").onmouseout = function() {mouseOutText()};
+		document.getElementById("myFunction").onmouseover = function() {mouseOverImage()};
+		document.getElementById("myFunction").onmouseout = function() {mouseOutImage()};
+		
+		function mouseOverImage() {
+		  audio = document.getElementById("program_microwave");
+		  audio.play();
+		  audio.play();
+		}
+
+		function mouseOutImage() {
+		  audio = document.getElementById("program_microwave");
+		  audio.load();
+		}
+		
+		function mouseOverText() {
+		  document.getElementById("myWarning").style.color = "red";
+		}
+
+		function mouseOutText() {
+		  document.getElementById("myWarning").style.color = "green";
+		}
+	</script>
+	
 	<script>
 		function change() {
 			var img1 = "https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png",
@@ -377,56 +404,56 @@ title: Math, Sonification, Plots
 		}
 	</script>
 
-	<script>
-			var playSetTime = "playSetTime";
-			var playCook = "playCook";
-			var playDefrost = "playDefrost";
-			var isPlayingIntro = false;
-			var isPlayingCook = false;
-			var isPlayingDefrost = false;
-			audio.volume = 0.4;
+	<script>	
+		var playSetTime = "playSetTime";
+		var playCook = "playCook";
+		var playDefrost = "playDefrost";
+		var isPlayingIntro = false;
+		var isPlayingCook = false;
+		var isPlayingDefrost = false;
+		audio.volume = 0.4;
 
-			function play(button) {
-					var audio;
-					if (button == playSetTime) {
-						var audio = document.getElementById("audio_intro");
-					}
-					else if (button == playCook) {
-						var audio = document.getElementById("audio_cook");
-					}
-					else if (button == playDefrost) {
-						var audio = document.getElementById("audio_defrost");
-					}
-					
-					if (!isPlayingIntro && !isPlayingCook && !isPlayingDefrost) {
-						if (audio == document.getElementById("audio_cook")) {
-							audio.loop = true;
-							isPlayingCook = true;
-						}
-						else if (audio == document.getElementById("audio_defrost")) {
-							audio.loop = true;
-							isPlayingDefrost = true;
-						}
-						else if (audio == document.getElementById("audio_intro")) {
-							isPlayingIntro = true;
-						}
-						audio.play();
-					}
-					
-					else if (!audio.ended) {
-						if (audio == document.getElementById("audio_cook")) {
-							isPlayingCook = false;
-						}
-						else if (audio == document.getElementById("audio_defrost")) {
-							isPlayingDefrost = false;
-						}
-						else if (audio == document.getElementById("audio_intro")) {
-							isPlayingIntro = false;
-						}
-						// audio.pause();
-						audio.load();
-					}
+		function play(button) {
+			var audio;
+			if (button == playSetTime) {
+				var audio = document.getElementById("audio_intro");
 			}
+			else if (button == playCook) {
+				var audio = document.getElementById("audio_cook");
+			}
+			else if (button == playDefrost) {
+				var audio = document.getElementById("audio_defrost");
+			}
+			
+			if (!isPlayingIntro && !isPlayingCook && !isPlayingDefrost) {
+				if (audio == document.getElementById("audio_cook")) {
+					audio.loop = true;
+					isPlayingCook = true;
+				}
+				else if (audio == document.getElementById("audio_defrost")) {
+					audio.loop = true;
+					isPlayingDefrost = true;
+				}
+				else if (audio == document.getElementById("audio_intro")) {
+					isPlayingIntro = true;
+				}
+				audio.play();
+			}
+			
+			else if (!audio.ended) {
+				if (audio == document.getElementById("audio_cook")) {
+					isPlayingCook = false;
+				}
+				else if (audio == document.getElementById("audio_defrost")) {
+					isPlayingDefrost = false;
+				}
+				else if (audio == document.getElementById("audio_intro")) {
+					isPlayingIntro = false;
+				}
+				// audio.pause();
+				audio.load();
+			}
+		}
 	</script>
 </body>
 <!-- footer><p><br>TESTING TESTING<br></p></footer -->
