--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -333,8 +333,8 @@ title: Math, Sonification, Plots
 	</div>
 		
 	<div class="btn-group btn-group-lg">
-		<button type="button" class="btn_xl" onclick="setBG_Black(); play(playCook)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
-		<button type="button" class="btn_xl" onclick="setBG_White(); play(playDefrost)" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
+		<button id="cookButton" type="button" class="btn_xl" onclick="setBG_Black(); play(playCook)" style="position: relative; background-color: red; color: black; float:left;"> COOK </button>
+		<button id="defrostButton" type="button" class="btn_xl" onclick="setBG_White(); play(playDefrost)" style="position: relative; background-color: #ADD8E6; color: black; float:left;"> DEFROST </button>
 		<style>
 			<button type="button" class="btn btn-primary">  COOK </button>
 			<button type="button" class="btn btn-primary">DEFROST</button>	
@@ -348,6 +348,9 @@ title: Math, Sonification, Plots
 	
 	
 	<audio id="program_microwave" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/program_microwave.mp4"></audio>
+	<audio id="audio_time_button" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/COOK_BUTTON.mp4"></audio>
+	<audio id="audio_cook_button" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/DEFROST_BUTTON.mp4"></audio>
+	<audio id="audio_defrost_button" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/SET_TIME_BUTTON.mp4"></audio>
 	<audio id="audio_intro" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/INCREASE_TIME.mp4"></audio>
 	<audio id="audio_cook" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_cook_sound.mp4"></audio>
 	<audio id="audio_defrost" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/microwave_defrost_sound.mp4"></audio>
@@ -358,9 +361,46 @@ title: Math, Sonification, Plots
 		document.getElementById("myFunction").onmouseover = function() {mouseOverImage()};
 		document.getElementById("myFunction").onmouseout = function() {mouseOutImage()};
 		
+		document.getElementById("myAnimation").onmouseout = function() {mouseOutImage()};
+		document.getElementById("cookButton").onmouseout = function() {mouseOutImage()};
+		document.getElementById("defrostButton").onmouseout = function() {mouseOutImage()};
+		
+		function mouseOverImage() {
+		  audio = document.getElementById("audio_time_button");
+		  audio.load();
+		  audio.play();
+		}
+
+		function mouseOutImage() {
+		  audio = document.getElementById("audio_time_button");
+		  audio.load();
+		}
+		
+		function mouseOverImage() {
+		  audio = document.getElementById("audio_cook_button");
+		  audio.load();
+		  audio.play();
+		}
+
+		function mouseOutImage() {
+		  audio = document.getElementById("audio_cook_button");
+		  audio.load();
+		}
+		
+		function mouseOverImage() {
+		  audio = document.getElementById("audio_defrost_button");
+		  audio.load();
+		  audio.play();
+		}
+
+		function mouseOutImage() {
+		  audio = document.getElementById("audio_defrost_button");
+		  audio.load();
+		}
+		
 		function mouseOverImage() {
 		  audio = document.getElementById("program_microwave");
-		  audio.play();
+		  audio.load();
 		  audio.play();
 		}
 
