--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -232,8 +232,8 @@ title: Math, Sonification, Plots
 				height: 71px; 
 				/* max-width: 100%; */
 				/* height: auto; */
-                position: relative;
-				/* position: absolute; */
+                /* position: relative; */
+				position: absolute;
 				/* position: sticky; */
 				/* top: 20%; */
 				/* left: 1%; */
@@ -246,6 +246,14 @@ title: Math, Sonification, Plots
 				/* background-color: black; */
 				color: black;
                 border-radius: 50%;
+		}
+		
+		#mydivheader {
+			padding: 10px;
+			cursor: move;
+			z-index: 10;
+			background-color: #2196F3;
+			color: #fff;
 		}
 		
 		.btn_xl {
