ADD GRAB ANIMATION

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -232,6 +232,8 @@ title: Math, Sonification, Plots
 				height: 71px; 
 				/* max-width: 100%; */
 				/* height: auto; */
+				
+				/* cursor: move; */
                 /* position: relative; */
 				position: absolute;
 				/* position: sticky; */
@@ -246,14 +248,6 @@ title: Math, Sonification, Plots
 				/* background-color: black; */
 				color: black;
                 border-radius: 50%;
-		}
-		
-		#mydivheader {
-			padding: 10px;
-			cursor: move;
-			z-index: 10;
-			background-color: #2196F3;
-			color: #fff;
 		}
 		
 		.btn_xl {
@@ -353,6 +347,48 @@ title: Math, Sonification, Plots
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</style>
 	</div>
+	
+	<script>
+		//Make the DIV element draggagle:
+		dragElement(document.getElementById("myAnimation"));
+
+		function dragElement(elmnt) {
+			var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+			elmnt.onmousedown = dragMouseDown;
+
+			function dragMouseDown(e) {
+				e = e || window.event;
+				e.preventDefault();
+				// get the mouse cursor position at startup:
+				pos3 = e.clientX;
+				pos4 = e.clientY;
+				document.onmouseup = closeDragElement;
+				// call a function whenever the cursor moves:
+				document.onmousemove = elementDrag;
+			}
+
+			function elementDrag(e) {
+				e = e || window.event;
+				e.preventDefault();
+				// calculate the new cursor position:
+				pos1 = pos3 - e.clientX;
+				pos2 = pos4 - e.clientY;
+				pos3 = e.clientX;
+				pos4 = e.clientY;
+				// set the element's new position:
+				elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+				elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+			}
+
+			function closeDragElement() {
+				/* stop moving when mouse button is released:*/
+				document.onmouseup = null;
+				document.onmousemove = null;
+			}
+		}
+	</script>
+
+	
 	
 	
 	<audio id="program_microwave" src="https://robert-bobkoskie.github.io/cs6750/MICROWAVE_PROTOTYPE/sounds/program_microwave.mp4"></audio>
