--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -318,9 +318,7 @@ title: Math, Sonification, Plots
 				<div id ="myAnimation"></div>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<div id="dragDiv">
-				<img id="myAnimation"/>
-			</div>
+			<img id="myAnimation"/>
 		</div>
 		
 		<div class="floatWarning" id="myWarning">
@@ -351,7 +349,7 @@ title: Math, Sonification, Plots
 	
 	<script>
 		//Make the DIV element draggagle:
-		dragElement(document.getElementById("dragDiv"));
+		dragElement(document.getElementById("myAnimation"));
 
 		function dragElement(elmnt) {
 			var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
