ADD GRAB ANIMATION

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -233,8 +233,9 @@ title: Math, Sonification, Plots
 				/* max-width: 100%; */
 				/* height: auto; */
 				cursor: move;
-                /* position: relative; */
-				position: absolute;
+                position: absolute;
+				z-index: 10;
+				/* position: relative; */
 				/* position: sticky; */
 				/* top: 20%; */
 				/* left: 1%; */
