MOD MOVE ANIMATION

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -234,7 +234,7 @@ title: Math, Sonification, Plots
 				/* height: auto; */
 				cursor: move;
                 position: absolute;
-				z-index: 10;
+				/* z-index: 10; */
 				/* position: relative; */
 				/* position: sticky; */
 				/* top: 20%; */
