--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -240,7 +240,7 @@ title: Math, Sonification, Plots
 				/* top: 20%; */
 				/* left: 1%; */
 				top: 1000px;
-				margin-left: 50px;
+				left: 50px;
 				/* margin-left: 1.25%; */
 				/* margin-top: 75%; */
 				/* overflow: hidden; */
