--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -87,84 +87,7 @@ title: Math, Sonification, Plots
         button:hover {
                 background-color: #3e8e41;
         }
-
-        .volDec {
-            background-color: #8A2BE2; /* BlueViolet background */
-            color: white; /* White text */
-            width: 0;
-            height: 0;
-            font-size: 18px;
-            font-weight: bold;
-			/* text-align: left; */
-            /* padding: 0px 5px; */
-            margin-right: 8px;
-            border-top: 24px solid transparent;
-            border-right: 36px solid #000;
-            border-bottom: 24px solid transparent;
-        }
-
-        .volInc {
-            background-color: #8A2BE2; /* BlueViolet background */
-            color: white; /* White text */
-			width:  0;
-            height: 0;
-			/^ display: inline-block */
-            /* text-align: left; */
-            font-size: 18px;
-            font-weight: bold;
-            border-top: 24px solid transparent;
-            border-left: 36px solid #000;
-            border-bottom: 24px solid transparent;
-        }
-
-        .play {
-            background-color: #4CAF50; /* Green background */
-            color: white; /* White text */
-            /* color: #FFFFFF; */
-            text-align: left;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 0px 8px;
-            margin-right:16px;
-            box-sizing: border-box;
-            /* display: inline-block */
-			/* width: 74px; */
-			/* background: transparent; */
-            width:  205;
-            height: 74px;
-
-            // transition: 100ms all ease;
-            cursor: pointer;
-
-            border-color: transparent transparent transparent #202020;
-            border-style: solid;
-            border-width: 37px 0px 37px 60px;
-        }
-
-        .pause {
-            background-color: #4CAF50; /* Green background */
-            color: white; /* White text */
-            // color: #FFFFFF;
-            text-align: left;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 0px 8px;
-            margin-right:16px;
-            // background: transparent;
-            box-sizing: border-box;
-            // display: inline-block
-			// width: 74px;
-            width:  205;
-            height: 74px;
-
-            // transition: 100ms all ease;
-            cursor: pointer;
-            
-            border-color: #202020;
-            border-style: double;
-            border-width: 0px 0px 0px 60px;
-        }
-
+		
         div {
                 text-align: justify;
                 text-justify: inter-word;
@@ -192,10 +115,11 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-			height: 465px;
+			height: 150px;
             /* width: 500px; */
-			width: 30%;
-			float: right;
+			width: 80%;
+			float: bottom;
+			/* float: right; */
             position:relative;
             /* position:absolute; */
             overflow-y: scroll;
