MOD BUTTON, WARNING LOCATIONS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -183,7 +183,8 @@ title: Math, Sonification, Plots
 				font-size: 18px;
 				font-weight: bold;
 				border-radius: 10px;
-				width:33%;
+				height: 40px;
+				width: 50%;
 		}
     </style>
 </head>
