MOD BUTTON, WARNING LOCATIONS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -176,6 +176,9 @@ title: Math, Sonification, Plots
 		}
 		
 		.btn_xl {
+				position: absolute;
+				top: 1000px;
+				left: 150px;
 				padding: 10px 20px;
 				background-color: #FFFFFF; /* Black background */
 				color: #FFFFFF; /* Orange text */
@@ -183,7 +186,7 @@ title: Math, Sonification, Plots
 				font-size: 18px;
 				font-weight: bold;
 				border-radius: 10px;
-				height: 40px;
+				height: 200px;
 				width: 50%;
 		}
     </style>
