MOD BUTTON, WARNING LOCATIONS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -237,8 +237,8 @@ title: Math, Sonification, Plots
         commensurable for publication.
     </p></div><br>
     
-	<div class="myContainer">
-		<div class="floatItems">
+	<div>
+		
 			<img id="myFunction"
 				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				 style="width:150%;height:auto;"
@@ -249,7 +249,7 @@ title: Math, Sonification, Plots
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
 			<img id="myAnimation"/>
-		</div>
+		
 	</div>
 		
 	<div class="btn-group btn-group-lg">
