--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -174,7 +174,7 @@ title: Math, Sonification, Plots
 				color: black;
                 border-radius: 50%;
 		}
-		
+				
 		.btn_xl {
 				position: absolute;
 				top: 14px;
@@ -237,8 +237,8 @@ title: Math, Sonification, Plots
         commensurable for publication.
     </p></div><br>
     
-	<div>
-		
+	<div class="myContainer">
+		<div class="floatItems">
 			<img id="myFunction"
 				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
 				 style="width:150%;height:auto;"
@@ -249,7 +249,7 @@ title: Math, Sonification, Plots
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
 			<img id="myAnimation"/>
-		
+		</div>
 	</div>
 		
 	<div class="btn-group btn-group-lg">
