MOD BUTTON, WARNING LOCATIONS

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -314,11 +314,6 @@ title: Math, Sonification, Plots
 				document.onmouseup = null;
 				document.onmousemove = null;
 			}
-			
-			function DEBUG() {
-				var number = "123";
-				document.getElementById("myDebug").innerHTML = number;
-			}
 		}
 	</script>
 
@@ -473,7 +468,4 @@ title: Math, Sonification, Plots
 		}
 	</script>
 </body>
-
-<footer onload="DEBUG()">
-	<h1>"The value for number is: " <span id="myDebug"></span></h1>
-</footer>
+<!-- footer><p><br>TESTING TESTING<br></p></footer -->
