--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -291,9 +291,6 @@ title: Math, Sonification, Plots
 				// get the mouse cursor position at startup:
 				pos3 = e.clientX;
 				pos4 = e.clientY;
-				if (pos3 < 100px || pos4 < 100px) {
-					closeDragElement;
-				}
 				document.onmouseup = closeDragElement;
 				// call a function whenever the cursor moves:
 				document.onmousemove = elementDrag;
@@ -310,6 +307,9 @@ title: Math, Sonification, Plots
 				// set the element's new position:
 				elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
 				elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+				if (lmnt.style.top < 100px || elmnt.style.left < 100px) {
+					closeDragElement;
+				}
 			}
 
 			function closeDragElement() {
