KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -307,7 +307,7 @@ title: Math, Sonification, Plots
 				// set the element's new position:
 				elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
 				elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
-				if (lmnt.style.top < 100px || elmnt.style.left < 100px) {
+				if (lmnt.style.top > 500px || elmnt.style.left > 500px) {
 					closeDragElement;
 				}
 			}
