--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -307,7 +307,7 @@ title: Math, Sonification, Plots
 				// set the element's new position:
 				elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
 				elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
-				if (elmnt.style.top > 500px || elmnt.style.left > 500px) {
+				if ((elmnt.offsetTop - pos2) > 500 || (elmnt.offsetLeft - pos1) > 500) {
 					closeDragElement;
 				}
 			}
