KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -248,7 +248,7 @@ title: Math, Sonification, Plots
 				<div id ="myAnimation"></div>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<img id="myAnimation" class="center fit myContainer">
+			<div id ="myAnimation"></div>
 		</div>
 	</div>
 		
