--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -168,7 +168,7 @@ title: Math, Sonification, Plots
 				/* margin-left: 1.25%; */
 				/* margin-top: 75%; */
 				/* overflow: hidden; */
-				/* object-fit: contain; */
+				object-fit: contain;
                 /* background-color: #555; */
 				/* background-color: black; */
 				color: black;
@@ -246,6 +246,7 @@ title: Math, Sonification, Plots
 				 onclick = "change(); play(playSetTime);"/>
 			<style>
 				<div id ="myAnimation"></div>
+				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
 			<div id ="myAnimation"></div>
