KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -131,6 +131,7 @@ title: Math, Sonification, Plots
 		.myContainer {
 				fwidth: 50%;
 				float: left;
+				object-fit: contain;
 				/* padding: 20px; */
                 /* width: 100%; */
                 /* height: 100%; */
@@ -168,7 +169,7 @@ title: Math, Sonification, Plots
 				/* margin-left: 1.25%; */
 				/* margin-top: 75%; */
 				/* overflow: hidden; */
-				object-fit: contain;
+				/* object-fit: contain; */
                 /* background-color: #555; */
 				/* background-color: black; */
 				color: black;
