KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -132,6 +132,7 @@ title: Math, Sonification, Plots
 				fwidth: 50%;
 				float: left;
 				object-fit: contain;
+				position: relative;
 				/* padding: 20px; */
                 /* width: 100%; */
                 /* height: 100%; */
