--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -131,8 +131,6 @@ title: Math, Sonification, Plots
 		.myContainer {
 				fwidth: 50%;
 				float: left;
-				object-fit: contain;
-				position: relative;
 				/* padding: 20px; */
                 /* width: 100%; */
                 /* height: 100%; */
@@ -175,6 +173,14 @@ title: Math, Sonification, Plots
 				/* background-color: black; */
 				color: black;
                 border-radius: 50%;
+		}
+		
+		@keyframes myAnimation {
+			0%   {background-color:red; left:0px; top:0px;}
+			25%  {background-color:yellow; left:200px; top:0px;}
+			50%  {background-color:blue; left:200px; top:200px;}
+			75%  {background-color:green; left:0px; top:200px;}
+			100% {background-color:red; left:0px; top:0px;}
 		}
 				
 		.btn_xl {
@@ -251,7 +257,7 @@ title: Math, Sonification, Plots
 				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<img id="myAnimation" class="center fit myContainer">
+			<div id ="myAnimation"></div>
 		</div>
 	</div>
 		
