KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -131,6 +131,7 @@ title: Math, Sonification, Plots
 		.myContainer {
 				fwidth: 50%;
 				float: left;
+				animation-name: myAnimation;
 				/* padding: 20px; */
                 /* width: 100%; */
                 /* height: 100%; */
