--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -131,7 +131,6 @@ title: Math, Sonification, Plots
 		.myContainer {
 				fwidth: 50%;
 				float: left;
-				animation-name: myAnimation;
 				/* padding: 20px; */
                 /* width: 100%; */
                 /* height: 100%; */
@@ -177,11 +176,12 @@ title: Math, Sonification, Plots
 		}
 		
 		@keyframes myAnimation {
-			0%   {background-color:red; left:0px; top:0px;}
-			25%  {background-color:yellow; left:200px; top:0px;}
-			50%  {background-color:blue; left:200px; top:200px;}
-			75%  {background-color:green; left:0px; top:200px;}
-			100% {background-color:red; left:0px; top:0px;}
+			0%, 100% {
+				bottom: 0;
+			}
+			50% {
+				bottom: 100px;
+			}
 		}
 				
 		.btn_xl {
