--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -13,7 +13,7 @@ title: Math, Sonification, Plots
 		!!! Use for sandbox !!!
 		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	</script>
-	<link rel="stylesheet" type="text/css" href="../../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<br><br>
 	
     <style>
