KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -157,7 +157,8 @@ title: Math, Sonification, Plots
 				/* max-width: 100%; */
 				/* height: auto; */
 				cursor: move;
-                position: absolute;
+                /* position: absolute; */
+				position: sticky;
 				/* z-index: 10; */
 				/* position: relative; */
 				/* position: sticky; */
