KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -159,9 +159,8 @@ title: Math, Sonification, Plots
 				cursor: move;
                 /* position: absolute; */
 				position: sticky;
-				/* z-index: 10; */
 				/* position: relative; */
-				/* position: sticky; */
+				/* z-index: 10; */
 				/* top: 20%; */
 				/* left: 1%; */
 				top: 1018px;
@@ -176,8 +175,6 @@ title: Math, Sonification, Plots
                 border-radius: 50%;
 		}
 		
-		
-				
 		.btn_xl {
 				position: absolute;
 				top: 14px;
@@ -252,7 +249,7 @@ title: Math, Sonification, Plots
 				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<div id ="myAnimation"></div>
+			<img id="myAnimation" class="fit myContainer">
 		</div>
 	</div>
 		
