KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -158,8 +158,8 @@ title: Math, Sonification, Plots
 				/* height: auto; */
 				cursor: move;
                 /* position: absolute; */
-				position: sticky;
-				/* position: relative; */
+				/* position: sticky; */
+				position: relative;
 				/* z-index: 10; */
 				/* top: 20%; */
 				/* left: 1%; */
