--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -157,10 +157,10 @@ title: Math, Sonification, Plots
 				/* max-width: 100%; */
 				/* height: auto; */
 				cursor: move;
-                /* position: absolute; */
-				/* position: sticky; */
-				position: relative;
+                position: absolute;
 				/* z-index: 10; */
+				/* position: relative; */
+				/* position: sticky; */
 				/* top: 20%; */
 				/* left: 1%; */
 				top: 1018px;
@@ -174,7 +174,7 @@ title: Math, Sonification, Plots
 				color: black;
                 border-radius: 50%;
 		}
-		
+				
 		.btn_xl {
 				position: absolute;
 				top: 14px;
@@ -239,18 +239,17 @@ title: Math, Sonification, Plots
     
 	<div class="myContainer">
 		<div class="floatItems">
-				<img id="myFunction"
-					 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
-					 style="width:150%;height:auto;"
-					 title="Click on Image for Description of Usage"
-					 onclick = "change(); play(playSetTime);"/>
+			<img id="myFunction"
+				 src="https://robert-bobkoskie.github.io/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
+				 style="width:150%;height:auto;"
+				 title="Click on Image for Description of Usage"
+				 onclick = "change(); play(playSetTime);"/>
 			<style>
 				<div id ="myAnimation"></div>
 				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<img id="myAnimation" class="fit">
-			
+			<div id ="myAnimation"></div>
 		</div>
 	</div>
 		
