--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -174,7 +174,16 @@ title: Math, Sonification, Plots
 				color: black;
                 border-radius: 50%;
 		}
-				
+		
+		@keyframes myAnimation {
+			0%, 10% {
+				bottom: 0;
+			}
+			50% {
+				bottom: 10px;
+			}
+		}
+		
 		.btn_xl {
 				position: absolute;
 				top: 14px;
