KEEP DRAG IN IMAGE

--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -175,6 +175,15 @@ title: Math, Sonification, Plots
                 border-radius: 50%;
 		}
 		
+		@keyframes myAnimation {
+			0%, 1% {
+				bottom: 0;
+			}
+			1% {
+				bottom: 1px;
+			}
+		}
+		
 		.btn_xl {
 				position: absolute;
 				top: 14px;
