--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -168,19 +168,20 @@ title: Math, Sonification, Plots
 				/* margin-left: 1.25%; */
 				/* margin-top: 75%; */
 				/* overflow: hidden; */
-				/* object-fit: contain; */
+				object-fit: contain;
                 /* background-color: #555; */
 				/* background-color: black; */
+				opacity: 1;
 				color: black;
                 border-radius: 50%;
 		}
 		
 		@keyframes myAnimation {
-			0%, 1% {
+			0%, 100% {
 				bottom: 0;
 			}
-			1% {
-				bottom: 1px;
+			50% {
+				bottom: 100px;
 			}
 		}
 		
