--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -150,6 +150,14 @@ title: Math, Sonification, Plots
 				float: left;
 				padding: 5px;
 		}
+		
+		.timer_area {
+				position: relative;
+				width: 330px;
+				height: 330px;
+				margin: 100px;
+				color: #000;
+		}
 
         #myAnimation {
 				width: 71px; 
@@ -259,7 +267,9 @@ title: Math, Sonification, Plots
 				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<div id ="myAnimation"></div>
+			<div class="timer_area"> 
+				<div class="port_animation"></div>
+			</div>
 		</div>
 	</div>
 		
