--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -150,14 +150,6 @@ title: Math, Sonification, Plots
 				float: left;
 				padding: 5px;
 		}
-		
-		.timer_area {
-				position: relative;
-				width: 330px;
-				height: 330px;
-				margin: 100px;
-				color: #000;
-		}
 
         #myAnimation {
 				width: 71px; 
@@ -267,9 +259,7 @@ title: Math, Sonification, Plots
 				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<div class="timer_area"> 
-				<div class="port_animation"></div>
-			</div>
+			<div id ="myAnimation"></div>
 		</div>
 	</div>
 		
