--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -150,7 +150,7 @@ title: Math, Sonification, Plots
 				float: left;
 				padding: 5px;
 		}
-
+		
         #myAnimation {
 				width: 71px; 
 				height: 71px; 
@@ -174,6 +174,14 @@ title: Math, Sonification, Plots
 				opacity: 1;
 				color: black;
                 border-radius: 50%;
+		}
+		
+		.timer_area {
+				position: relative;
+				width: 330px;
+				height: 70px;
+				margin: 40px;
+				color: #000;
 		}
 		
 		@keyframes myAnimation {
@@ -259,7 +267,9 @@ title: Math, Sonification, Plots
 				<img id="myAnimation"/>
 				<img id="myAnimation" class="center fit myContainer">
 			</style>
-			<div id ="myAnimation"></div>
+			<div class="timer_area"> 
+				<img id="myAnimation"/>
+			</div>
 		</div>
 	</div>
 		
