--- a/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/sandbox/index.html
@@ -177,7 +177,7 @@ title: Math, Sonification, Plots
 		}
 		
 		.timer_area {
-				position: relative;
+				position: sticky;
 				width: 330px;
 				height: 70px;
 				margin: 40px;
