--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -24,7 +24,12 @@ title: Human-Computer Interaction
 		<nav><ul>
 			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" title="Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Assistive Technology for the Visually Impaired" target="_self">Assistive Technology for the Visually Impaired</a></li>
-			<li><a href="docs/ASSIGNMENT_M2-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired" target="_self">A Better User Interface for the Visually Impaired</a></li>
+			<li><a href="docs/ASSIGNMENT_M1-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired: Problem Space Definition, Needfinding" target="_self">A Better User Interface for the Visually Impaired: Problem Space Definition, Needfinding</a></li>
+			<li><a href="docs/ASSIGNMENT_M2-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired: Needfinding Analysis, Mediate Bias" target="_self">A Better User Interface for the Visually Impaired: Needfinding Analysis, Mediate Bias</a></li>
+			
+			
+			<li><a href="docs/ASSIGNMENT_M3-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired: Design Lifecycle, Brainstorming Plan" target="_self">A Better User Interface for the Visually Impaired: Design Lifecycle, Brainstorming Plan</a></li>
+			<li><a href="docs/ASSIGNMENT_M4-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired" target="_self">A Better User Interface for the Visually Impaired</a></li>
 			<li><a href="docs/ASSIGNMENT_P3-rbobkoskie3.pdf" title="Design Principles, Heuristics, Representation and Learning Curves" target="_self">Design Principles, Heuristics, Representation and Learning Curves</a></li>
 			<li><a href="docs/Seven_Stages_of_Action.pdf" title="Exploring the Seven Stages of Action" target="_self">Exploring the Seven Stages of Action</a></li>
 			<li><a href="docs/ASSIGNMENT_P2-rbobkoskie3.pdf" title="Consider Cognitive Load to Improve Interface Design" target="_self">Consider Cognitive Load to Improve Interface Design</a></li>
