--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -17,14 +17,19 @@ title: Secure Computer Systems
     <div><p>
         The work originates from CS6238: Secure Computer Systems (SCS) class projects.
     <br>
-	<h1>SCS Papers</h1>
+	<h1>SCS Papersn</h1>
 		<nav><ul>
 			<li><a href="docs/Client_Server_Security.pdf" title="A discussion on Client Server Security" target="_self">A discussion on Client Server Security</a></li>
 			<li><a href="docs/2-Factor_Auth.pdf" title="Factor Authentication" target="_self">2-Factor Authentication</a></li>
 			<li><a href="docs/Exploring_SetUID.pdf" title="Exploring SetUID" target="_self">Exploring SetUID</a></li>
-			<li><a href="docs/Memory_Protection.pdf" title="Memory Protectio" target="_self">Memory Protection</a></li>
+			<li><a href="docs/Memory_Protection.pdf" title="Memory Protection" target="_self">Memory Protection</a></li>
 		</ul></nav>
-		<br><br><br>
+	<br>
+	<h1>A Demonstration of a Working Prototype for Secure Communication Between a Client <= Certificate Authority (CA)  => Server.</h1>
+		<nav><ul>
+			<li><a href="https://youtu.be/E8Y9mq0nm7A" title="Prototype" target="_self">Prototype</a></li>
+		</ul></nav>
+	<br><br><br>
 
 		<footer>
 			<ul>
