Add YouYube Video: Secure Computing Systems

--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -27,7 +27,7 @@ title: Secure Computer Systems
 	<br>
 	<h1>A Demonstration of a Working Prototype for Secure Communication Between a Client <= Certificate Authority (CA)  => Server.</h1>
 		<nav><ul>
-			<li><a href="https://youtu.be/E8Y9mq0nm7A" title="Prototype" target="_self">Prototype</a></li>
+			<li><a href="https://youtu.be/E8Y9mq0nm7A" title="Prototype" target="_blank">Prototype</a></li>
 		</ul></nav>
 	<br><br><br>
 
